[package]
name = "notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
http-body-util = "0.1.2"
hyper = "1.5.2"
serde = "1.0.217"
serde_json = "1.0.138"
serenity = "0.12.4"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
